--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <title>Dad Jokes</title>
 
   <script src="/jquery-3.3.1.min.js"></script>
-  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script> -->
   <script text="type/javascript" src="/script.js"></script>
 </head>
 
@@ -18,10 +17,38 @@
   <div class='main-container'>  
     <div class='container'>
         <h1 class='h1-home'>Dad Jokes</h1>
-        <p class='p-home' id='random-joke'>
-          
-        </p>
-  
+
+        <div class='center'>
+          <p class='quote left'>"</p>
+          <p class='p-home' id='random-joke'></p>
+          <p class='quote right'>"</p>
+        </div>
+
+        <div class='center'>
+          <button class='random-button'>New Joke</button>
+        </div>
+
+        <div class='spacer'></div>
+        <hr>
+        <div class='spacer'></div>
+
+        <div class='center'>
+          <div class='search'>
+              <h3 class='h3-home'>Find a joke about...</h3>
+
+              <form class='center search-form'>
+                <input class="search-input" type="text"></input><br/>
+                <input class="search-button" type="submit" value="Submit"></input>
+              </form>
+          </div>
+        </div>
+
+        <div class='spacer'></div>
+
+        <div class='center'>
+          <div class='results'></div>
+        </div>
+
         <div class='empty-large'></div>
     </div> 
   </div> 
