--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
               <form class='center search-form'>
                 <input class="search-input" type="text"></input><br/>
-                <input class="search-button" type="submit" value="Submit"></input>
+                <input class="search-button" type="submit" value="Search"></input>
               </form>
           </div>
         </div>
@@ -60,7 +60,7 @@
   <!------------- Footer ------------->
   <div class='my-footer'>
     See this project on Github:&nbsp;&nbsp;
-    <a id='footer-link' href="https://github.com/nathanielw9/monkeyfist">  https://github.com/nathanielw9/monkeyfist </a>
+    <a id='footer-link' href="https://github.com/nathanielw9/dadjokes">  https://github.com/nathanielw9/dadjokes </a>
   </div>
   <!----------- End Footer ----------->
 
