actually done (removed quotes)

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h1 class='h1-home'>Dad Jokes</h1>
 
         <div class='center'>
-          <p class='quote left'>"</p>
+          <!-- <p class='quote left'>"</p> -->
           <p class='p-home' id='random-joke'></p>
-          <p class='quote right'>"</p>
+          <!-- <p class='quote right'>"</p> -->
         </div>
 
         <div class='center'>
